--- a/t2.html
+++ b/t2.html
@@ -22,7 +22,7 @@
 				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
 			</div> -->
 			<div class="team__details--name">
-				#Us <br> <br>
+				Explorers <br> <br>
 			</div>
 			<!-- <div class="team__details--standings">
 				(50-32, 21-20 Away)
@@ -45,7 +45,7 @@
 				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
 			</div> -->
 			<div class="team__details--name">
-				Asur
+				Ronaldo
 			</div>
 			<!-- <div class="team__details--standings">
 				(50-32, 21-20 Away)
@@ -69,7 +69,31 @@
 				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
 			</div> -->
 			<div class="team__details--name">
-				Rage
+				Gambit
+			</div>
+			<!-- <div class="team__details--standings">
+				(50-32, 21-20 Away)
+			</div> -->
+		</div>
+
+		<div class="team__score team__score--1">0</div>
+		<div class="team__score team__score--2">0</div>
+		<div class="team__score team__score--3">0</div>
+		<div class="team__score team__score--4">0</div>
+		<div class="team__score team__score--5">0</div>
+
+		<div class="team__total">
+			0
+		</div>
+	</div>
+	<br>
+	<div class="team team--1">
+		<div class="team__details">
+			<!-- <div class="team__details--logo">
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
+			</div> -->
+			<div class="team__details--name">
+				skolars
 			</div>
 			<!-- <div class="team__details--standings">
 				(50-32, 21-20 Away)
@@ -92,30 +116,7 @@
 				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
 			</div> -->
 			<div class="team__details--name">
-				Aces
-			</div>
-			<!-- <div class="team__details--standings">
-				(50-32, 21-20 Away)
-			</div> -->
-		</div>
-
-		<div class="team__score team__score--1">0</div>
-		<div class="team__score team__score--2">0</div>
-		<div class="team__score team__score--3">0</div>
-		<div class="team__score team__score--4">0</div>
-		<div class="team__score team__score--5">0</div>
-
-		<div class="team__total">
-			0
-		</div>
-	</div>
-	<div class="team team--1">
-		<div class="team__details">
-			<!-- <div class="team__details--logo">
-				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
-			</div> -->
-			<div class="team__details--name">
-				Spy <br> <br>
+				FARAZ <br> <br> <br>
 			</div>
 			<!-- <div class="team__details--standings">
 				(50-32, 21-20 Away)
