--- a/t3.html
+++ b/t3.html
@@ -22,7 +22,7 @@
 				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
 			</div> -->
 			<div class="team__details--name">
-				#Us <br> <br>
+				Black ops <br> &nbsp;
 			</div>
 			<!-- <div class="team__details--standings">
 				(50-32, 21-20 Away)
@@ -45,7 +45,7 @@
 				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
 			</div> -->
 			<div class="team__details--name">
-				Asur
+				The Invincibles
 			</div>
 			<!-- <div class="team__details--standings">
 				(50-32, 21-20 Away)
@@ -69,7 +69,7 @@
 				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
 			</div> -->
 			<div class="team__details--name">
-				Rage
+				Pixie Normous
 			</div>
 			<!-- <div class="team__details--standings">
 				(50-32, 21-20 Away)
@@ -92,7 +92,7 @@
 				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
 			</div> -->
 			<div class="team__details--name">
-				Aces
+				Rambunctious <br> rascals <br> <br>
 			</div>
 			<!-- <div class="team__details--standings">
 				(50-32, 21-20 Away)
@@ -115,7 +115,7 @@
 				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
 			</div> -->
 			<div class="team__details--name">
-				Spy <br> <br>
+				Zero Seven
 			</div>
 			<!-- <div class="team__details--standings">
 				(50-32, 21-20 Away)
