--- a/t3.html
+++ b/t3.html
@@ -1,18 +1,18 @@
 <link rel="stylesheet" href="leader.css">
 <div class="scoreboard">
 	<div class="title">
-		Round 1
+		Teams
 	</div>
 
 	<div class="quaters">
-		<span>1</span>
-		<span>2</span>
-		<span>3</span>
-		<span>4</span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
 	</div>
 
 	<div class="total">
-		T
+	Scores
 	</div>
 
 
@@ -144,6 +144,6 @@
 <style media="screen">
   body{
   background-image:url("MV.jpeg");
-
+  background-size:cover;
 }
 </style>
