--- a/t4.html
+++ b/t4.html
@@ -1,18 +1,18 @@
 <link rel="stylesheet" href="leader.css">
 <div class="scoreboard">
 	<div class="title">
-		Round 1
+		Teams
 	</div>
 
 	<div class="quaters">
-		<span>1</span>
-		<span>2</span>
-		<span>3</span>
-		<span>4</span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
 	</div>
 
 	<div class="total">
-		T
+	Scores
 	</div>
 
 
@@ -114,6 +114,7 @@ Matrix &nbsp;
 <style media="screen">
   body{
   background-image:url("MV.jpeg");
+	background-size:cover;
 
 }
 </style>
