--- a/leader.html
+++ b/leader.html
@@ -29,7 +29,7 @@
 			</div> -->
 		</div>
 
-		<div class="team__score team__score--1">0</div>
+		<div class="team__score team__score--1">25</div>
 		<div class="team__score team__score--2">0</div>
 		<div class="team__score team__score--3">0</div>
 		<div class="team__score team__score--4">0</div>
@@ -52,14 +52,13 @@
 			</div> -->
 		</div>
 
-		<div class="team__score team__score--1">0</div>
+		<div class="team__score team__score--1">15</div>
 		<div class="team__score team__score--2">0</div>
 		<div class="team__score team__score--3">0</div>
 		<div class="team__score team__score--4">0</div>
 		<div class="team__score team__score--5">0</div>
 
 		<div class="team__total">
-			0
 		</div>
 	</div>
 
@@ -76,7 +75,7 @@
 			</div> -->
 		</div>
 
-		<div class="team__score team__score--1">0</div>
+		<div class="team__score team__score--1">24</div>
 		<div class="team__score team__score--2">0</div>
 		<div class="team__score team__score--3">0</div>
 		<div class="team__score team__score--4">0</div>
@@ -86,7 +85,7 @@
 			0
 		</div>
 	</div>
-	<div class="team team--1">
+	<div class="team winner team--1">
 		<div class="team__details">
 			<!-- <div class="team__details--logo">
 				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
@@ -99,7 +98,7 @@
 			</div> -->
 		</div>
 
-		<div class="team__score team__score--1">0</div>
+		<div class="team__score team__score--1">14</div>
 		<div class="team__score team__score--2">0</div>
 		<div class="team__score team__score--3">0</div>
 		<div class="team__score team__score--4">0</div>
@@ -122,7 +121,7 @@
 			</div> -->
 		</div>
 
-		<div class="team__score team__score--1">0</div>
+		<div class="team__score team__score--1">19</div>
 		<div class="team__score team__score--2">0</div>
 		<div class="team__score team__score--3">0</div>
 		<div class="team__score team__score--4">0</div>
