--- a/t2.html
+++ b/t2.html
@@ -29,7 +29,7 @@
 			</div> -->
 		</div>
 
-		<div class="team__score team__score--1">0</div>
+		<div class="team__score team__score--1">25</div>
 		<div class="team__score team__score--2">0</div>
 		<div class="team__score team__score--3">0</div>
 		<div class="team__score team__score--4">0</div>
@@ -52,7 +52,7 @@
 			</div> -->
 		</div>
 
-		<div class="team__score team__score--1">0</div>
+		<div class="team__score team__score--1">20</div>
 		<div class="team__score team__score--2">0</div>
 		<div class="team__score team__score--3">0</div>
 		<div class="team__score team__score--4">0</div>
@@ -76,7 +76,7 @@
 			</div> -->
 		</div>
 
-		<div class="team__score team__score--1">0</div>
+		<div class="team__score team__score--1">15</div>
 		<div class="team__score team__score--2">0</div>
 		<div class="team__score team__score--3">0</div>
 		<div class="team__score team__score--4">0</div>
@@ -87,7 +87,7 @@
 		</div>
 	</div>
 	<br>
-	<div class="team team--1">
+	<div class="team winner team--1">
 		<div class="team__details">
 			<!-- <div class="team__details--logo">
 				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
@@ -100,7 +100,7 @@
 			</div> -->
 		</div>
 
-		<div class="team__score team__score--1">0</div>
+		<div class="team__score team__score--1">15</div>
 		<div class="team__score team__score--2">0</div>
 		<div class="team__score team__score--3">0</div>
 		<div class="team__score team__score--4">0</div>
@@ -123,7 +123,7 @@
 			</div> -->
 		</div>
 
-		<div class="team__score team__score--1">0</div>
+		<div class="team__score team__score--1">25</div>
 		<div class="team__score team__score--2">0</div>
 		<div class="team__score team__score--3">0</div>
 		<div class="team__score team__score--4">0</div>
