--- a/t4.html
+++ b/t4.html
@@ -29,17 +29,17 @@ Matrix &nbsp;
 			</div> -->
 		</div>
 
-		<div class="team__score team__score--1">0</div>
+		<div class="team__score team__score--1">20</div>
 		<div class="team__score team__score--2">0</div>
 		<div class="team__score team__score--3">0</div>
 		<div class="team__score team__score--4">0</div>
 		<div class="team__score team__score--5">0</div>
 
 		<div class="team__total">
-			0
+			20
 		</div>
 	</div>
-	<div class="team team--1">
+	<div class="team winner team--1">
 		<div class="team__details">
 			<!-- <div class="team__details--logo">
 				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
@@ -52,14 +52,14 @@ Matrix &nbsp;
 			</div> -->
 		</div>
 
-		<div class="team__score team__score--1">0</div>
+		<div class="team__score team__score--1">13</div>
 		<div class="team__score team__score--2">0</div>
 		<div class="team__score team__score--3">0</div>
 		<div class="team__score team__score--4">0</div>
 		<div class="team__score team__score--5">0</div>
 
 		<div class="team__total">
-			0
+			13
 		</div>
 	</div>
 
@@ -76,14 +76,14 @@ Matrix &nbsp;
 			</div> -->
 		</div>
 
-		<div class="team__score team__score--1">0</div>
+		<div class="team__score team__score--1">16</div>
 		<div class="team__score team__score--2">0</div>
 		<div class="team__score team__score--3">0</div>
 		<div class="team__score team__score--4">0</div>
 		<div class="team__score team__score--5">0</div>
 
 		<div class="team__total">
-			0
+			16
 		</div>
 	</div>
 	<div class="team team--1">
