--- a/leader.html
+++ b/leader.html
@@ -16,51 +16,10 @@
 	</div>
 
 
-	<div class="team team--1">
-		<div class="team__details">
-			<!-- <div class="team__details--logo">
-				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
-			</div> -->
-			<div class="team__details--name">
-				#Us <br> <br>
-			</div>
-			<!-- <div class="team__details--standings">
-				(50-32, 21-20 Away)
-			</div> -->
-		</div>
 
-		<div class="team__score team__score--1">25</div>
-		<div class="team__score team__score--2">0</div>
-		<div class="team__score team__score--3">0</div>
-		<div class="team__score team__score--4">0</div>
-		<div class="team__score team__score--5">0</div>
 
-		<div class="team__total">
-			0
-		</div>
-	</div>
-	<div class="team team--1">
-		<div class="team__details">
-			<!-- <div class="team__details--logo">
-				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
-			</div> -->
-			<div class="team__details--name">
-				Asur
-			</div>
-			<!-- <div class="team__details--standings">
-				(50-32, 21-20 Away)
-			</div> -->
-		</div>
 
-		<div class="team__score team__score--1">15</div>
-		<div class="team__score team__score--2">0</div>
-		<div class="team__score team__score--3">0</div>
-		<div class="team__score team__score--4">0</div>
-		<div class="team__score team__score--5">0</div>
 
-		<div class="team__total">
-		</div>
-	</div>
 
 	<div class="team team--1">
 		<div class="team__details">
@@ -76,38 +35,17 @@
 		</div>
 
 		<div class="team__score team__score--1">24</div>
-		<div class="team__score team__score--2">0</div>
+		<div class="team__score team__score--2">23</div>
 		<div class="team__score team__score--3">0</div>
 		<div class="team__score team__score--4">0</div>
-		<div class="team__score team__score--5">0</div>
+
 
 		<div class="team__total">
-			0
+			47
 		</div>
 	</div>
-	<div class="team winner team--1">
-		<div class="team__details">
-			<!-- <div class="team__details--logo">
-				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
-			</div> -->
-			<div class="team__details--name">
-				Aces
-			</div>
-			<!-- <div class="team__details--standings">
-				(50-32, 21-20 Away)
-			</div> -->
-		</div>
 
-		<div class="team__score team__score--1">14</div>
-		<div class="team__score team__score--2">0</div>
-		<div class="team__score team__score--3">0</div>
-		<div class="team__score team__score--4">0</div>
-		<div class="team__score team__score--5">0</div>
 
-		<div class="team__total">
-			0
-		</div>
-	</div>
 	<div class="team team--1">
 		<div class="team__details">
 			<!-- <div class="team__details--logo">
@@ -122,13 +60,60 @@
 		</div>
 
 		<div class="team__score team__score--1">19</div>
-		<div class="team__score team__score--2">0</div>
+		<div class="team__score team__score--2">21</div>
 		<div class="team__score team__score--3">0</div>
 		<div class="team__score team__score--4">0</div>
-		<div class="team__score team__score--5">0</div>
+
 
 		<div class="team__total">
-			0
+			40
+		</div>
+	</div>
+	<br> 
+	<div class="team team--1">
+		<div class="team__details">
+			<!-- <div class="team__details--logo">
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
+			</div> -->
+			<div class="team__details--name">
+				Explorers <br> <br>
+			</div>
+			<!-- <div class="team__details--standings">
+				(50-32, 21-20 Away)
+			</div> -->
+		</div>
+
+		<div class="team__score team__score--1">25</div>
+		<div class="team__score team__score--2">23</div>
+		<div class="team__score team__score--3">0</div>
+		<div class="team__score team__score--4">0</div>
+
+
+		<div class="team__total">
+			48
+		</div>
+	</div>
+	<div class="team team--1">
+		<div class="team__details">
+			<!-- <div class="team__details--logo">
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
+			</div> -->
+			<div class="team__details--name">
+				FARAZ <br> <br> <br>
+			</div>
+			<!-- <div class="team__details--standings">
+				(50-32, 21-20 Away)
+			</div> -->
+		</div>
+
+		<div class="team__score team__score--1">25</div>
+		<div class="team__score team__score--2">24</div>
+		<div class="team__score team__score--3">0</div>
+		<div class="team__score team__score--4">0</div>
+
+
+		<div class="team__total">
+			49
 		</div>
 	</div>
 
@@ -137,7 +122,7 @@
 
 
 	<div class="note">
-		ECHOES Meta-Quest Round1
+		ECHOES Meta-Quest Round2
 	</div>
 </div>
 <style media="screen">
@@ -145,6 +130,5 @@
   background-image:url("MV.jpeg");
 	background-size:cover;
 
-
-}
 </style>
+}
