--- a/t3.html
+++ b/t3.html
@@ -16,29 +16,8 @@
 	</div>
 
 
-	<div class="team team--1">
-		<div class="team__details">
-			<!-- <div class="team__details--logo">
-				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
-			</div> -->
-			<div class="team__details--name">
-				Black ops <br> &nbsp;
-			</div>
-			<!-- <div class="team__details--standings">
-				(50-32, 21-20 Away)
-			</div> -->
-		</div>
 
-		<div class="team__score team__score--1">14</div>
-		<div class="team__score team__score--2">0</div>
-		<div class="team__score team__score--3">0</div>
-		<div class="team__score team__score--4">0</div>
-		<div class="team__score team__score--5">0</div>
 
-		<div class="team__total">
-			14
-		</div>
-	</div>
 	<div class="team team--1">
 		<div class="team__details">
 			<!-- <div class="team__details--logo">
@@ -53,13 +32,13 @@
 		</div>
 
 		<div class="team__score team__score--1">21</div>
-		<div class="team__score team__score--2">0</div>
+		<div class="team__score team__score--2">23</div>
 		<div class="team__score team__score--3">0</div>
 		<div class="team__score team__score--4">0</div>
-		<div class="team__score team__score--5">0</div>
+
 
 		<div class="team__total">
-			21
+			44
 		</div>
 	</div>
 
@@ -77,13 +56,13 @@
 		</div>
 
 		<div class="team__score team__score--1">14</div>
-		<div class="team__score team__score--2">0</div>
+		<div class="team__score team__score--2">25</div>
 		<div class="team__score team__score--3">0</div>
 		<div class="team__score team__score--4">0</div>
-		<div class="team__score team__score--5">0</div>
+
 
 		<div class="team__total">
-			0
+			39
 		</div>
 	</div>
 	<div class="team team--1">
@@ -99,16 +78,17 @@
 			</div> -->
 		</div>
 
-		<div class="team__score team__score--1">27</div>
-		<div class="team__score team__score--2">0</div>
+		<div class="team__score team__score--1">26</div>
+		<div class="team__score team__score--2">17</div>
 		<div class="team__score team__score--3">0</div>
 		<div class="team__score team__score--4">0</div>
-		<div class="team__score team__score--5">0</div>
+
 
 		<div class="team__total">
-			0
+			43
 		</div>
 	</div>
+	<br> <br>
 	<div class="team team--1">
 		<div class="team__details">
 			<!-- <div class="team__details--logo">
@@ -123,13 +103,37 @@
 		</div>
 
 		<div class="team__score team__score--1">22</div>
-		<div class="team__score team__score--2">0</div>
+		<div class="team__score team__score--2">21</div>
 		<div class="team__score team__score--3">0</div>
 		<div class="team__score team__score--4">0</div>
-		<div class="team__score team__score--5">0</div>
+
 
 		<div class="team__total">
-			0
+			43
+		</div>
+	</div>
+	<div class="team team--1">
+		<div class="team__details">
+			<!-- <div class="team__details--logo">
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
+			</div> -->
+			<div class="team__details--name">
+Matrix &nbsp;
+			</div>
+			<!-- <div class="team__details--standings">
+				(50-32, 21-20 Away)
+			</div> -->
+		</div>
+
+		<div class="team__score team__score--1">20</div>
+		<div class="team__score team__score--2">25</div>
+		<div class="team__score team__score--3">0</div>
+		<div class="team__score team__score--4">0</div>&nbsp;
+
+&nbsp; &nbsp;
+		<div class="team__total">
+
+			45
 		</div>
 	</div>
 
@@ -138,7 +142,7 @@
 
 
 	<div class="note">
-		ECHOES Meta-Quest Round1
+		ECHOES Meta-Quest Round2
 	</div>
 </div>
 <style media="screen">
