--- a/leader.html
+++ b/leader.html
@@ -21,7 +21,7 @@
 
 
 
-	<div class="team team--1">
+	<div class="team  team--1">
 		<div class="team__details">
 			<!-- <div class="team__details--logo">
 				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
@@ -36,17 +36,17 @@
 
 		<div class="team__score team__score--1">24</div>
 		<div class="team__score team__score--2">23</div>
-		<div class="team__score team__score--3">0</div>
+		<div class="team__score team__score--3">10</div>
 		<div class="team__score team__score--4">0</div>
 
 
 		<div class="team__total">
-			47
+			57
 		</div>
 	</div>
 
 
-	<div class="team team--1">
+	<div class="team winner team--1">
 		<div class="team__details">
 			<!-- <div class="team__details--logo">
 				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
@@ -61,15 +61,15 @@
 
 		<div class="team__score team__score--1">19</div>
 		<div class="team__score team__score--2">21</div>
-		<div class="team__score team__score--3">0</div>
+		<div class="team__score team__score--3">5</div>
 		<div class="team__score team__score--4">0</div>
 
 
 		<div class="team__total">
-			40
+			45
 		</div>
 	</div>
-	<br> 
+	<br>
 	<div class="team team--1">
 		<div class="team__details">
 			<!-- <div class="team__details--logo">
@@ -85,12 +85,12 @@
 
 		<div class="team__score team__score--1">25</div>
 		<div class="team__score team__score--2">23</div>
-		<div class="team__score team__score--3">0</div>
+		<div class="team__score team__score--3">6</div>
 		<div class="team__score team__score--4">0</div>
 
 
 		<div class="team__total">
-			48
+			54
 		</div>
 	</div>
 	<div class="team team--1">
@@ -108,12 +108,12 @@
 
 		<div class="team__score team__score--1">25</div>
 		<div class="team__score team__score--2">24</div>
-		<div class="team__score team__score--3">0</div>
+		<div class="team__score team__score--3">6.5</div>
 		<div class="team__score team__score--4">0</div>
 
 
 		<div class="team__total">
-			49
+			55.5
 		</div>
 	</div>
 
