--- a/t3.html
+++ b/t3.html
@@ -18,7 +18,7 @@
 
 
 
-	<div class="team team--1">
+	<div class="team winner team--1">
 		<div class="team__details">
 			<!-- <div class="team__details--logo">
 				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
@@ -33,16 +33,16 @@
 
 		<div class="team__score team__score--1">21</div>
 		<div class="team__score team__score--2">23</div>
-		<div class="team__score team__score--3">0</div>
+		<div class="team__score team__score--3">7</div>
 		<div class="team__score team__score--4">0</div>
 
 
 		<div class="team__total">
-			44
+			51
 		</div>
 	</div>
 
-	<div class="team team--1">
+	<div class="team winner team--1">
 		<div class="team__details">
 			<!-- <div class="team__details--logo">
 				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
@@ -57,15 +57,15 @@
 
 		<div class="team__score team__score--1">14</div>
 		<div class="team__score team__score--2">25</div>
-		<div class="team__score team__score--3">0</div>
+		<div class="team__score team__score--3">8</div>
 		<div class="team__score team__score--4">0</div>
 
 
 		<div class="team__total">
-			39
+			47
 		</div>
 	</div>
-	<div class="team team--1">
+	<div class="team winner team--1">
 		<div class="team__details">
 			<!-- <div class="team__details--logo">
 				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
@@ -80,12 +80,12 @@
 
 		<div class="team__score team__score--1">26</div>
 		<div class="team__score team__score--2">17</div>
-		<div class="team__score team__score--3">0</div>
+		<div class="team__score team__score--3">6.5</div>
 		<div class="team__score team__score--4">0</div>
 
 
 		<div class="team__total">
-			43
+			49.5
 		</div>
 	</div>
 	<br> <br>
@@ -104,12 +104,12 @@
 
 		<div class="team__score team__score--1">22</div>
 		<div class="team__score team__score--2">21</div>
-		<div class="team__score team__score--3">0</div>
+		<div class="team__score team__score--3">9</div>
 		<div class="team__score team__score--4">0</div>
 
 
 		<div class="team__total">
-			43
+			52
 		</div>
 	</div>
 	<div class="team team--1">
@@ -127,13 +127,13 @@ Matrix &nbsp;
 
 		<div class="team__score team__score--1">20</div>
 		<div class="team__score team__score--2">25</div>
-		<div class="team__score team__score--3">0</div>
+		<div class="team__score team__score--3">7</div>
 		<div class="team__score team__score--4">0</div>&nbsp;
 
 &nbsp; &nbsp;
 		<div class="team__total">
 
-			45
+			52
 		</div>
 	</div>
 
