--- a/leader.html
+++ b/leader.html
@@ -39,37 +39,14 @@
 		<div class="team__score team__score--3">10</div>
 		<div class="team__score team__score--4">0</div>
 
-
+&nbsp; &nbsp;
 		<div class="team__total">
 			57
 		</div>
 	</div>
 
 
-	<div class="team winner team--1">
-		<div class="team__details">
-			<!-- <div class="team__details--logo">
-				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
-			</div> -->
-			<div class="team__details--name">
-				Spy <br> <br>
-			</div>
-			<!-- <div class="team__details--standings">
-				(50-32, 21-20 Away)
-			</div> -->
-		</div>
 
-		<div class="team__score team__score--1">19</div>
-		<div class="team__score team__score--2">21</div>
-		<div class="team__score team__score--3">5</div>
-		<div class="team__score team__score--4">0</div>
-
-
-		<div class="team__total">
-			45
-		</div>
-	</div>
-	<br>
 	<div class="team team--1">
 		<div class="team__details">
 			<!-- <div class="team__details--logo">
@@ -116,13 +93,60 @@
 			55.5
 		</div>
 	</div>
+	<br><br>
+	<div class="team team--1">
+		<div class="team__details">
+			<!-- <div class="team__details--logo">
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
+			</div> -->
+			<div class="team__details--name">
+				Zero Seven
+			</div>
+			<!-- <div class="team__details--standings">
+				(50-32, 21-20 Away)
+			</div> -->
+		</div>
+
+		<div class="team__score team__score--1">22</div>
+		<div class="team__score team__score--2">21</div>
+		<div class="team__score team__score--3">9</div>
+		<div class="team__score team__score--4">0</div>
+
+
+		<div class="team__total">
+			52
+		</div>
+	</div>
+	<div class="team team--1">
+		<div class="team__details">
+			<!-- <div class="team__details--logo">
+				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
+			</div> -->
+			<div class="team__details--name">
+				Zero Seven
+			</div>
+			<!-- <div class="team__details--standings">
+				(50-32, 21-20 Away)
+			</div> -->
+		</div>
+
+		<div class="team__score team__score--1">22</div>
+		<div class="team__score team__score--2">21</div>
+		<div class="team__score team__score--3">9</div>
+		<div class="team__score team__score--4">0</div>
+
+
+		<div class="team__total">
+			52
+		</div>
+	</div>
 
 
 
 
 
 	<div class="note">
-		ECHOES Meta-Quest Round2
+		ECHOES Meta-Quest Round4
 	</div>
 </div>
 <style media="screen">
