--- a/leader.html
+++ b/leader.html
@@ -21,7 +21,7 @@
 
 
 
-	<div class="team  team--1">
+	<div class="team winner  team--1">
 		<div class="team__details">
 			<!-- <div class="team__details--logo">
 				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
@@ -37,11 +37,11 @@
 		<div class="team__score team__score--1">24</div>
 		<div class="team__score team__score--2">23</div>
 		<div class="team__score team__score--3">10</div>
-		<div class="team__score team__score--4">0</div>
+		<div class="team__score team__score--4">21</div>
 
 &nbsp; &nbsp;
 		<div class="team__total">
-			57
+			78
 		</div>
 	</div>
 
@@ -63,11 +63,11 @@
 		<div class="team__score team__score--1">25</div>
 		<div class="team__score team__score--2">23</div>
 		<div class="team__score team__score--3">6</div>
-		<div class="team__score team__score--4">0</div>
+		<div class="team__score team__score--4">22</div>
 
 
 		<div class="team__total">
-			54
+			76
 		</div>
 	</div>
 	<div class="team team--1">
@@ -86,12 +86,11 @@
 		<div class="team__score team__score--1">25</div>
 		<div class="team__score team__score--2">24</div>
 		<div class="team__score team__score--3">6.5</div>
-		<div class="team__score team__score--4">0</div>
-
+		<div class="team__score team__score--4">19</div>
+&nbsp; &nbsp;
 
 		<div class="team__total">
-			55.5
-		</div>
+74.5		</div>
 	</div>
 	<br><br>
 	<div class="team team--1">
@@ -110,11 +109,11 @@
 		<div class="team__score team__score--1">22</div>
 		<div class="team__score team__score--2">21</div>
 		<div class="team__score team__score--3">9</div>
-		<div class="team__score team__score--4">0</div>
+		<div class="team__score team__score--4">17</div>
 
 
 		<div class="team__total">
-			52
+			69
 		</div>
 	</div>
 	<div class="team team--1">
@@ -123,21 +122,21 @@
 				<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/124740/bears.png" alt="">
 			</div> -->
 			<div class="team__details--name">
-				Zero Seven
+				Matrix
 			</div>
 			<!-- <div class="team__details--standings">
 				(50-32, 21-20 Away)
 			</div> -->
 		</div>
 
-		<div class="team__score team__score--1">22</div>
-		<div class="team__score team__score--2">21</div>
-		<div class="team__score team__score--3">9</div>
-		<div class="team__score team__score--4">0</div>
-
+		<div class="team__score team__score--1">20</div>
+		<div class="team__score team__score--2">25</div>
+		<div class="team__score team__score--3">7</div>
+		<div class="team__score team__score--4">24.5</div>
+&nbsp; &nbsp;
 
 		<div class="team__total">
-			52
+			76.5
 		</div>
 	</div>
 
